--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title id="title"></title>
-    <link rel="icon" type="image/x-icon" href="static/assets/Congrui.ico" />
+    <link rel="icon" type="image/x-icon" href="static/assets/kerisu.ico" />
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Google fonts-->
@@ -51,7 +51,7 @@
                         <a class="nav-link me-lg-3" href="#awards">AWARDS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#service">SERVICE</a>
+                        <a class="nav-link me-lg-3" href="#service">ONGOING WORK </a>
                     </li>
 
                 </ul>
@@ -60,7 +60,7 @@
     </nav>
 
     <!-- Top Section -->
-    <section class="top-section" style="background-image: url('static/assets/img/MIT.png');">
+    <section class="top-section" style="background-image: url('static/assets/img/background1.png');">
         <div class="top-section-content">
             <div class="container px-1">
                 <div class="row">
@@ -133,7 +133,7 @@
     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="service">
         <div class="container px-5">
             <header>
-                <h2 id="awards-subtitle"><i class="bi bi-chat-left-text"></i>&nbsp;SERVICE </h2>
+                <h2 id="awards-subtitle"><i class="bi bi-chat-left-text"></i>&nbsp;ONGOING WORK </h2>
             </header>
             <div class="main-body" id="service-md"></div>
         </div>
@@ -146,10 +146,10 @@
     <footer class="bg-bottom text-center py-5">
         <div class="container px-5">
             <div class="text-white-50 small">
-                <div id="copyright-text" class="mb-2"></div>
-                <a id="github-link" href="https://github.com/JerryYin777">Github</a>
+                <!-- <div id="copyright-text" class="mb-2"></div>
+                <a id="github-link" href="https://github.com/dkx2077">Github</a>
                 <span class="mx-1">&middot;</span>
-                <a id="license-link" href="https://github.com/JerryYin777/JerryYin777.github.io/blob/master/LICENSE">License</a>
+                <a id="license-link" href="https://github.com/JerryYin777/JerryYin777.github.io/blob/master/LICENSE">License</a> -->
             </div>
         </div>
     </footer>
