--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
     <!-- Core JS-->
     <script type="text/javascript" src="static/js/scripts.js"></script>
     <script type="text/javascript" src="static/js/js-yaml.min.js"></script>
+    <script type="text/javascript" src="static/js/log.js"></script>
 
 
 </body>
