--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#publications">PUBLICATIONS</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#project">SIDE PROJECTS</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#awards">AWARDS</a>
                     </li>
@@ -68,8 +68,8 @@
                         <h2 id="top-section-bg-text" class="text-light display-3 lh-1 mb-4 font-alt"></h2>
                     </div>
                     <div class="col-lg-4">
-                        <div class="user-photo photo"><img class="shadow"
-                                src="static/assets/img/photo.jpg"></div>
+                        <!-- <div class="user-photo photo"><img class="shadow"
+                                src="static/assets/img/photo.jpg"></div> -->
                     </div>
                 </div>
             </div>
@@ -105,20 +105,19 @@
     <!-- Publications  -->
 
     <!-- Side Project -->
-    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="project">
+    <!-- <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="project">
         <div class="container px-5">
             <header>
-                <!-- <h2 id="achievements-subtitle"><i class="bi bi-trophy-fill"></i>&nbsp;ACHIEVEMENTS</h2> -->
                 <h2 id="achievements-subtitle"><i class="bi bi-code-slash"></i>&nbsp; SIDE PROJECTS</h2>
             </header>
             <div class="main-body" id="project-md">
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Side Project -->
 
     <!-- Awards -->
-    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="awards">
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="awards">
         <div class="container px-5">
             <header>
                 <h2 id="awards-subtitle"><i class="bi bi-award-fill"></i>&nbsp;AWARDS </h2>
@@ -130,7 +129,7 @@
     <!-- Awards -->
 
     <!-- Service -->
-    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="service">
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="service">
         <div class="container px-5">
             <header>
                 <h2 id="awards-subtitle"><i class="bi bi-chat-left-text"></i>&nbsp;ONGOING WORK </h2>
@@ -146,10 +145,10 @@
     <footer class="bg-bottom text-center py-5">
         <div class="container px-5">
             <div class="text-white-50 small">
-                <!-- <div id="copyright-text" class="mb-2"></div>
-                <a id="github-link" href="https://github.com/dkx2077">Github</a>
+                <div id="copyright-text" class="mb-2"></div>
+                <a id="github-link" href="https://github.com/dkx2077/dkx2077.github.io">Github</a>
                 <span class="mx-1">&middot;</span>
-                <a id="license-link" href="https://github.com/JerryYin777/JerryYin777.github.io/blob/master/LICENSE">License</a> -->
+                <a id="license-link" href="https://github.com/dkx2077/dkx2077.github.io/blob/master/LICENSE">License</a>
             </div>
         </div>
     </footer>
@@ -167,7 +166,7 @@
     <!-- Core JS-->
     <script type="text/javascript" src="static/js/scripts.js"></script>
     <script type="text/javascript" src="static/js/js-yaml.min.js"></script>
-    <script type="text/javascript" src="static/js/log.js"></script>
+    <!-- <script type="text/javascript" src="static/js/log.js"></script> -->
 
 
 </body>
